--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,10 @@
+html, body {
+  padding: 0;
+  height: 100%;
+}
+
 body {
+  box-sizing: border-box;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
