--- a/src/components/Waiting/Waiting.module.css
+++ b/src/components/Waiting/Waiting.module.css
@@ -1,10 +1,10 @@
-.Waiting {
+.root {
     position: relative;
     background-color: white;
     background-image: url('../../../public/img/sand_watch_left.png');
     background-repeat: no-repeat;
-    height: calc(100vh - 40px);
-    padding: 20px;
+    height: calc(100vh - 64px);
+    padding: 20px 20px 44px;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -13,7 +13,7 @@
     overflow: hidden;
 }
 
-.Waiting::before {
+.root::before {
     position: absolute;
     content: '';
     background-image: url('../../../public/img/sand_watch_right.png');
@@ -25,7 +25,7 @@
     pointer-events: none;
 }
 
-h1 {
+.title {
     text-align: center;
     flex: 1;
     display: flex;
