--- a/src/components/Dice/index.module.css
+++ b/src/components/Dice/index.module.css
@@ -1,20 +1,30 @@
 .root {
+    background-color: white;
+    height: calc(100vh - 64px);
+    padding: 20px 20px 44px;
     display: flex;
-    flex-flow: column nowrap;
+    flex-direction: column;
     align-items: center;
+    justify-content: flex-start;
     gap: 4px;
 }
 
-.dice {
-    width: 52px;
-    height: 52px;
-
+.diceContainer {
+    flex: 1;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: white;
-    border: 1px solid gray;
-    border-radius: 16px;
+    width: 100%;
+}
+
+.dice {
+    width: 238px;
+    height: 238px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #F5F1E9;
+    border-radius: 4px;
 }
 
 .dotContainer {
@@ -22,14 +32,21 @@
     width: 100%;
     height: 100%;
     display: flex;
+    background-color: #F5F1E9;
     align-items: center;
     justify-content: center;
+    border-radius: 4px;
 }
 
 .dot {
     position: absolute;
-    width: 4px;
-    height: 4px;
+    width: 16px;
+    height: 16px;
     background-color: black;
     border-radius: 50%;
+}
+
+.buttonContainer {
+    width: 100%;
+    margin-top: auto;
 }
