--- a/src/components/UI/Button/BottomButton.module.css
+++ b/src/components/UI/Button/BottomButton.module.css
@@ -6,6 +6,7 @@
     border-radius: 24px;
     border: 1px solid black;
     transition: background-color 0.3s ease;
+    font-size: 17px;
 }
 
 .root:hover {
