--- a/src/components/UI/Button/BottomButton.module.css
+++ b/src/components/UI/Button/BottomButton.module.css
@@ -1,6 +1,7 @@
 .root {
     margin-top: auto;
-    background: none;
+    background: black;
+    color: white;
     width: 100%;
     height: 52px;
     border-radius: 24px;
